--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ SESSION_ID="session id here"
 HUGGINGFACE_TOKEN="verify human https://huggingface.co/docs/hub/security-tokens" 
 IMAGE_PROXY="image proxy url here"
 JWT_SECRET="jwt secret"
+JWT_PASS="pass"
