--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "midjourney-api-node-final",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -11,14 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.5",
     "bcryptjs": "^2.4.3",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
+    "discord-interactions": "^3.4.0",
+    "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "midjourney": "^4.3.17",
+    "node-fetch": "^3.3.2",
     "winston": "^3.13.0",
     "ws": "^8.17.0"
+  },
+  "devDependencies": {
+    "@types/async": "^3.2.24"
   }
 }
