--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.5",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
     "midjourney": "^4.3.17",
     "node-fetch": "^3.3.2",
@@ -27,6 +29,7 @@
     "ws": "^8.17.0"
   },
   "devDependencies": {
+    "@gradio/client": "^0.19.4",
     "@types/async": "^3.2.24"
   }
 }
