--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "midjourney-api-node-final",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "description": "",
   "main": "server.js",
   "scripts": {
