--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SALAI_TOKEN="Token of the Account from which you paid MidJourney"
-DISCORD_TOKEN="Token of the Account from which you paid MidJourney"
+BOT_TOKEN="Token of the Account from which you paid MidJourney"
 SERVER_ID="Server id here"
 CHANNEL_ID="Channel in which commands are sent"
 CHANNEL_ID_FACE="Channel in which commands are sent"
