create log discord sender

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ HUGGINGFACE_TOKEN="verify human https://huggingface.co/docs/hub/security-tokens"
 IMAGE_PROXY="image proxy url here"
 JWT_SECRET="jwt secret"
 JWT_PASS="pass"
+WEBHOOK_URL="URL"
